Refactor security and controller components: remove WebConfig, enhance AuthController with logout functionality, update JwtAuthenticationFilter and JwtTokenProvider for improved token handling, and streamline test cases for better coverage and clarity.